# pdf-viewer

./: .gitignore  CLAUDE.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: app.js  index.html  style.css
